reemplazo de lorem

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
         <section class="contacto">
             <h1>Contacto</h1>
             <hr>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil odio porro minima. Commodi ullam esse facilis vero fugiat exercitationem, nemo incidunt voluptatum alias consequuntur reiciendis. Dolorum doloremque et voluptate voluptates!</p>
+            <p>Sería increíble que trabajemos juntos, dejame tus datos y me comunicaré contigo para que me cuentes sobre el proyecto que tienes en mente. También puedes contactarme o conocer más sobre mi trabajo en los diferentes canales de comunicación que se encuentran a continuación:</p>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.6407908975875!2d-64.18662023424828!3d-31.424021503766937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28fb8f9010b%3A0xf38e0d8c5a49ab83!2sNueva%20Cordoba%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1626891536540!5m2!1ses-419!2sar" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
