--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -67,43 +67,43 @@
         <section class="servicios animate__animated animate__fadeInUp">
             <h1>Servicios</h1>
             <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio esse, voluptatibus sit eaque molestias dignissimos consequatur est illum sunt ex quos quae odit rem officiis placeat fugit molestiae minus eos!</p>
+            <p>100% Soluciones digital para tu negocio</p>
         </section> 
         <section class="servicios2 animate__animated animate__fadeInUp">
             <div class="servicio1">
                 <i class="fas fa-bullhorn"></i>
                 <h4>Marketing digital</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Diseño, creación de estrategias e implemnetación de campañas digitales.</p>
             </div>
             <div class="servicio2">
                 <i class="fas fa-users"></i>
                 <h4>Redes sociales</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Creación de estrategias de comunicación digital y desarrollo del contenido en variadas plataformas.</p>
             </div>
             <div class="servicio3">
                 <i class="fas fa-laptop-code"></i>
                 <h4>Desarrollo web</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Creación de sitios web adaptados a tu audiencia, modernos y funcionales.</p>
             </div>
             <div class="servicio4">
                 <i class="fas fa-chart-line"></i>
                 <h4>Performance marketing</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>En base a los objetivos del cliente se trabaja con datos para garantizar el retorno.</p>
             </div>
             <div class="servicio5">
                 <i class="fas fa-video"></i>
                 <h4>Contenido Audiovisual</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Creación de piezas audiovisuales, videos, gifs, fotografía, animaciones.</p>
             </div>
             <div class="servicio6">
                 <i class="fas fa-search-dollar"></i>
                 <h4>Inbound marketing</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Mediante la metodología inbound (atraer - convertir - cerrar - deleitar) se realiza un trabajo guiado para convertir y obtener ventas.</p>
             </div>
         </section>
         <section class="aboutMe animate__animated animate__fadeInUp">
             <h3>¿Por qué elegirme?</h3>
-            <p>Cuento con 6 años de experiencia trabajando con clientes en Latam y EEUU.</p>
+            <p>Cuento con 6 años de experiencia trabajando con clientes en Latam y EEUU. Mis principales valores son: Servicio orientado al cliente, transparencia, profesionalidad, innovación.</p>
         </section>  
     </main>   
     <!--PIE DE PÁGINA-->
