--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -68,7 +68,7 @@
             <h1>Sobre mí</h1>
             <hr>
             <div class="tarjetaClientes">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint sapiente accusantium consequuntur voluptatibus libero quis itaque porro, ea quam molestiae accusamus illum non suscipit debitis corrupti nihil magnam architecto mollitia.</p>
+                <p>Cuento con 10 años de experiencia en marketing y 6 en el universo del marketing digital y desarrollo web. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafios concretos.</p>
             </div>
             <h2>Habilidades</h2>
             <div class="skills">
@@ -124,7 +124,7 @@
                         <div class="carousel-caption d-md-block">
                             <img src="../img/mujer-empoderada-2.jpg" alt="mujer de brazos cruzados">
                             <h5>Nerina Jimenez</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet dicta maiores repudiandae sunt! Delectus et voluptatibus odit veniam reiciendis dignissimos facilis placeat quos earum, fuga officia deleniti voluptatem illo!</p>
+                            <p>Trabajar con Ingrid ha sido muy bueno. Abrí mi negocio y tenía que hacer publicidad, ella diseño la estrategia y me ayudo a darme a conocer en el sector. ¡La recomiendo totalmente!</p>
                         </div>
                     </div>
                     <!--slider 2-->
@@ -132,7 +132,7 @@
                         <div class="carousel-caption d-md-block">
                             <img src="../img/marcelo-cliente.jpg" alt="hombre con lentes">   
                             <h5>Marcelo Barbieri</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet dicta maiores repudiandae sunt! Delectus et voluptatibus odit veniam reiciendis dignissimos facilis placeat quos earum, fuga officia deleniti voluptatem illo!</p>
+                            <p>Es una gran comunicadora. Capacitó al personal y su ayuda y empatía fue clave a la hora de trabajar juntos.</p>
                         </div>
                     </div>
                     <!--slider 3-->
@@ -140,7 +140,7 @@
                         <div class="carousel-caption d-md-block">
                             <img src="../img/gaston-cliente.jpg" alt="hombre sentado">
                             <h5>Gastón Armenante</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur amet dicta maiores repudiandae sunt! Delectus et voluptatibus odit veniam reiciendis dignissimos facilis placeat quos earum, fuga officia deleniti voluptatem illo!</p>
+                            <p>Ingrid siempre es muy responsable, ante cualquier duda siempre había una respuesta de su parte. ¡Gracias por ayudarnos con nuestra empresa!.</p>
                         </div>
                     </div>
                 </div>
