nodificacion de grilla

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -68,32 +68,38 @@
             <h1>Portafolio</h1>
             <hr>
             <div class="grillaPortafolio">
-                <div class="auno">
-                    <img src="../img/portafolio-a-1.jpg" alt="computador">
+                <div class="portafolio__imagenes">
+                    <div class="auno">
+                        <img src="../img/artesanatto.png" alt="computador">
+                    </div>
+                    <div class="vuno">
+                        <img src="../img/colchonet.png" alt="decoración comedor">
+                    </div>
+                    <div class="ados">
+                        <img src="../img/lser francis.png" alt="celular">
+                    </div>
                 </div>
-                <div class="vuno">
-                    <img src="../img/portafolio-v-1.jpg" alt="decoración comedor">
+                <div class="portafolio__imagenes">
+                    <div class="vdos">
+                        <img src="../img/artesanatto2.png" alt="planta decoración">
+                    </div>
+                    <div class="atres">
+                        <img src="../img/gdrarq.png" alt="comedor con sillas rosadas">
+                    </div>
+                    <div class="vtres">
+                        <img src="../img/gerlux.png" alt="flores">
+                    </div>
                 </div>
-                <div class="ados">
-                    <img src="../img/portafolio-a-2.jpg" alt="celular">
-                </div>
-                <div class="vdos">
-                    <img src="../img/portafolio-v-2.jpg" alt="planta decoración">
-                </div>
-                <div class="atres">
-                    <img src="../img/portafolio-a-3.jpg" alt="comedor con sillas rosadas">
-                </div>
-                <div class="vtres">
-                    <img src="../img/portafolio-v-3.jpg" alt="flores">
-                </div>
-                <div class="acuatro">
-                    <img src="../img/portafolio-a-4.jpg" alt="frutos secos">
-                </div>
-                <div class="vcuatro">
-                    <img src="../img/portafolio-v-4.jpg" alt="mesa de luz">
-                </div>
-                <div class="acinco">
-                    <img src="../img/portafolio-a-5.jpg" alt="comida">
+                <div class="portafolio__imagenes">
+                    <div class="acuatro">
+                        <img src="../img/lser.png" alt="frutos secos">
+                    </div>
+                    <div class="vcuatro">
+                        <img src="../img/david robinson.png" alt="mesa de luz">
+                    </div>
+                    <div class="acinco">
+                        <img src="../img/wallstone francis.png" alt="comida">
+                    </div>
                 </div>
             </div>
         </section>
