editando animaciones y agregando y editando contenido y estilos

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -27,6 +27,10 @@
     
     <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!--ANIMATE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <!--ENCABEZADO-->
@@ -64,41 +68,41 @@
     </header>
     <!--TRABAJOS-->
     <main>
-        <section class="portafolio">
+        <section class="portafolio animate__animated animate__fadeInUp">
             <h1>Portafolio</h1>
             <hr>
             <div class="grillaPortafolio">
                 <div class="portafolio__imagenes">
                     <div class="auno">
-                        <img src="../img/artesanatto.png" alt="computador">
+                        <img src="../img/artesanatto.png" alt="cava de vinos">
                     </div>
                     <div class="vuno">
-                        <img src="../img/colchonet.png" alt="decoración comedor">
+                        <img src="../img/colchonet.png" alt="personas en variedad de camas">
                     </div>
                     <div class="ados">
-                        <img src="../img/lser francis.png" alt="celular">
+                        <img src="../img/lser francis.png" alt="local de autos y local de estetica">
                     </div>
                 </div>
                 <div class="portafolio__imagenes">
                     <div class="vdos">
-                        <img src="../img/artesanatto2.png" alt="planta decoración">
+                        <img src="../img/artesanatto2.png" alt="sillas e iluminacion">
                     </div>
                     <div class="atres">
-                        <img src="../img/gdrarq.png" alt="comedor con sillas rosadas">
+                        <img src="../img/gdrarq.png" alt="colage de escaleras">
                     </div>
                     <div class="vtres">
-                        <img src="../img/gerlux.png" alt="flores">
+                        <img src="../img/gerlux.png" alt="mobiliarios varios">
                     </div>
                 </div>
                 <div class="portafolio__imagenes">
                     <div class="acuatro">
-                        <img src="../img/lser.png" alt="frutos secos">
+                        <img src="../img/lser.png" alt="collage de fotos de casa con pileta">
                     </div>
                     <div class="vcuatro">
-                        <img src="../img/david robinson.png" alt="mesa de luz">
+                        <img src="../img/david robinson.png" alt="local de suspension">
                     </div>
                     <div class="acinco">
-                        <img src="../img/wallstone francis.png" alt="comida">
+                        <img src="../img/wallstone francis.png" alt="escaleras con revestimientos">
                     </div>
                 </div>
             </div>
