--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -27,6 +27,10 @@
     
     <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <!--ANIMATE-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 </head>
 <body>
     <!--ENCABEZADO-->
@@ -64,11 +68,32 @@
     </header>
     <!--SKILSS-->
     <main>
-        <section class="sobremi">
+        <section class="sobremi animate__animated animate__fadeInUp">
             <h1>Sobre mí</h1>
             <hr>
             <div class="tarjetaClientes">
                 <p>Cuento con 10 años de experiencia en marketing y 6 en el universo del marketing digital y desarrollo web. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafios concretos.</p>
+            </div>
+            <div class="curriculum">
+                <div class="foto_perfil">
+                    <img src="../img/ingrid.png" alt="foto ingrid">
+                </div>
+                <div class="info">
+                    <h2>Marketing / Desarrolladora Web</h2>
+                    <p>Soy Profesional en Administración de Empresas Mención Marketing</p>
+                    <div>
+                        <ul>
+                            <li><strong>Sitio Web: </strong>www.inguica.click</li>
+                            <li><strong>Teléfono: </strong>+54 9 351 3014152</li>
+                            <li><strong>Ciudad: </strong>Córdoba, Argentina</li>
+                        </ul>
+                        <ul>
+                            <li><strong>Experiencia: </strong>10 años</li>
+                            <li><strong>Email: </strong>inguica.comunicaciones@gmail.com</li>
+                            <li><strong>Disponibilidad: </strong>Freelance</li>
+                        </ul>    
+                    </div>
+                </div>
             </div>
             <h2>Habilidades</h2>
             <div class="skills">
@@ -110,7 +135,7 @@
                 </div>
             </div>
         </section>
-        <section class="sobremi">
+        <section class="sobremi animate__animated animate__fadeInUp">
             <h2>Testimonios</h2>
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
