modificando sass y correcciones

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -60,8 +60,8 @@
                 </li>
               </ul>
               <div>
-                  <i class="fab fa-instagram"></i>
-                  <i class="fab fa-linkedin"></i>
+                <a href="https://www.instagram.com/inguica.comunicaciones/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ingridnaguelquinsobarzo/" target="_blank"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
         </nav>
@@ -72,36 +72,36 @@
             <h1>Portafolio</h1>
             <hr>
             <div class="grillaPortafolio">
-                <div class="portafolio__imagenes">
-                    <div class="auno">
+                <div class="auno portafolio__imagenes">
+                    <div class="aunoa">
                         <img src="../img/artesanatto.png" alt="cava de vinos">
                     </div>
-                    <div class="vuno">
+                    <div class="aunob">
                         <img src="../img/colchonet.png" alt="personas en variedad de camas">
                     </div>
-                    <div class="ados">
+                    <div class="aunoc">
                         <img src="../img/lser francis.png" alt="local de autos y local de estetica">
                     </div>
                 </div>
-                <div class="portafolio__imagenes">
-                    <div class="vdos">
+                <div class="ados portafolio__imagenes">
+                    <div class="adosa">
                         <img src="../img/artesanatto2.png" alt="sillas e iluminacion">
                     </div>
-                    <div class="atres">
+                    <div class="adosb">
                         <img src="../img/gdrarq.png" alt="colage de escaleras">
                     </div>
-                    <div class="vtres">
+                    <div class="adosc">
                         <img src="../img/gerlux.png" alt="mobiliarios varios">
                     </div>
                 </div>
-                <div class="portafolio__imagenes">
-                    <div class="acuatro">
+                <div class="atres portafolio__imagenes">
+                    <div class="atresa">
                         <img src="../img/lser.png" alt="collage de fotos de casa con pileta">
                     </div>
-                    <div class="vcuatro">
+                    <div class="atresb">
                         <img src="../img/david robinson.png" alt="local de suspension">
                     </div>
-                    <div class="acinco">
+                    <div class="atresc">
                         <img src="../img/wallstone francis.png" alt="escaleras con revestimientos">
                     </div>
                 </div>
