--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,8 +60,8 @@
                 </li>
               </ul>
               <div>
-                  <i class="fab fa-instagram"></i>
-                  <i class="fab fa-linkedin"></i>
+                  <a href="https://www.instagram.com/inguica.comunicaciones/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/ingridnaguelquinsobarzo/" target="_blank"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
         </nav>
