editando sobre mi boton

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section class="hero">
             <div>
                 <h1 class="tituloPrincipal hero__titulo"><span>Soy Ingrid</span>, especialista de Marketing y Programadora web freelance.</h1>
-                <button type="button" class="btn btn-light hero__boton">Sobre mí</button>
+                <a href="./pages/sobremi.html"><button type="button" class="btn btn-light hero__boton">Sobre mí</button></a>
             </div>
         </section> 
     </main>
