modificando texto de slider

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -149,7 +149,7 @@
                         <div class="carousel-caption d-md-block">
                             <img src="../img/mujer-empoderada-2.jpg" alt="mujer de brazos cruzados">
                             <h5>Nerina Jimenez</h5>
-                            <p>Trabajar con Ingrid ha sido muy bueno. Abrí mi negocio y tenía que hacer publicidad, ella diseño la estrategia y me ayudo a darme a conocer en el sector. ¡La recomiendo totalmente!</p>
+                            <p>Trabajar con Ingrid ha sido muy bueno. Ella diseño la estrategia y me ayudo a darme a conocer en el sector.</p>
                         </div>
                     </div>
                     <!--slider 2-->
@@ -165,7 +165,7 @@
                         <div class="carousel-caption d-md-block">
                             <img src="../img/gaston-cliente.jpg" alt="hombre sentado">
                             <h5>Gastón Armenante</h5>
-                            <p>Ingrid siempre es muy responsable, ante cualquier duda siempre había una respuesta de su parte. ¡Gracias por ayudarnos con nuestra empresa!.</p>
+                            <p>Ingrid siempre es muy responsable, ante cualquier duda siempre había una respuesta de su parte.</p>
                         </div>
                     </div>
                 </div>
