agregando imagenes y editando portafolio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--DESCRIPCION-->
-    <meta name="description" content="Hola soy Ingrid. Soy especialista en Marketing digital y desarrollo web, ayudo a potenciar negocios B2B Y B2C.">
+    <meta name="description" content="Hola soy Ingrid soy Consultora de Marketing digital, Estratega y Speaker.">
 
     <!--KEYWORDS-->
     <meta name="keywords"  content="HTML, marketing, CSS, desarrollo web, marketing digital, B2B, B2C , sitio web">
@@ -66,7 +66,7 @@
     <main>
         <section class="hero">
             <div>
-                <h1 class="tituloPrincipal hero__titulo"><span>Soy Ingrid</span>, especialista de Marketing y Programadora web freelance.</h1>
+                <h1 class="tituloPrincipal hero__titulo"><span>Soy Ingrid</span>, Consultora de Marketing digital, Estratega y Speaker.</h1>
                 <a href="./pages/sobremi.html"><button type="button" class="btn btn-light hero__boton">Sobre mí</button></a>
             </div>
         </section> 
