--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -71,13 +71,13 @@
         <section class="servicios animate__animated animate__fadeInUp">
             <h1>Servicios</h1>
             <hr>
-            <p>100% Soluciones digital para tu negocio</p>
+            <p>Soluciones digitales para tu negocio</p>
         </section> 
         <section class="servicios2 animate__animated animate__fadeInUp">
             <div class="servicio1">
                 <i class="fas fa-bullhorn"></i>
                 <h4>Marketing digital</h4>
-                <p>Diseño, creación de estrategias e implemnetación de campañas digitales.</p>
+                <p>Diseño, creación de estrategias e implementación de campañas digitales.</p>
             </div>
             <div class="servicio2">
                 <i class="fas fa-users"></i>
@@ -86,8 +86,8 @@
             </div>
             <div class="servicio3">
                 <i class="fas fa-laptop-code"></i>
-                <h4>Desarrollo web</h4>
-                <p>Creación de sitios web adaptados a tu audiencia, modernos y funcionales.</p>
+                <h4>Landing Page</h4>
+                <p>Creación de páginas de aterrizaje que consigan la conversión.</p>
             </div>
             <div class="servicio4">
                 <i class="fas fa-chart-line"></i>
@@ -106,9 +106,11 @@
             </div>
         </section>
         <section class="aboutMe animate__animated animate__fadeInUp">
-            <h3>¿Por qué elegirme?</h3>
-            <p>Cuento con 6 años de experiencia trabajando con clientes en Latam y EEUU. Mis principales valores son: Servicio orientado al cliente, transparencia, profesionalidad, innovación.</p>
-        </section>  
+            <h3>Trabajemos juntos</h3>
+            <hr>
+            <p>Cuento con 10 años de experiencia trabajando en entornos digitales. Mis principales valores son: Servicio orientado al cliente, transparencia, profesionalidad, innovación.</p>
+            <img src="../img/inguica.jpg" alt="foto Ingrid">
+        </section>
     </main>   
     <!--PIE DE PÁGINA-->
     <footer>
