--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -72,15 +72,16 @@
             <h1>Sobre mí</h1>
             <hr>
             <div class="tarjetaClientes">
-                <p>Cuento con 10 años de experiencia en marketing y 6 en el universo del marketing digital y desarrollo web. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafios concretos.</p>
+                <p>Cuento con 10 años de experiencia en marketing y 6 en el universo del marketing digital. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafios concretos.</p>
             </div>
             <div class="curriculum">
                 <div class="foto_perfil">
-                    <img src="../img/ingrid.png" alt="foto ingrid">
+                    <img src="../img/ingrid.jpg" alt="foto ingrid">
                 </div>
                 <div class="info">
-                    <h2>Marketing / Desarrolladora Web</h2>
-                    <p>Soy Profesional en Administración de Empresas Mención Marketing</p>
+                    <h2>Asesoría en Marketing y comunicación digital</h2> 
+                    <p id="parrafoTitulo">Amante de la creación y difusión de contenidos</p>
+                    <p>Soy Profesional en Administración de Empresas Mención Marketing y Periodista en proceso.</p>
                     <div>
                         <ul>
                             <li><strong>Sitio Web: </strong>www.inguica.click</li>
