--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -72,7 +72,8 @@
             <h1>Sobre mí</h1>
             <hr>
             <div class="tarjetaClientes">
-                <p>Cuento con 10 años de experiencia en marketing y 6 en el universo del marketing digital. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafios concretos.</p>
+                <p>Cuento con 17 años de experiencia en marketing y 6 en el universo del marketing digital. En el año 2004 inicie mis primeros pasos en marketing y comunicación que incluían compra de medios, organización de eventos, ferias y merchandising, tuve la posibilidad de trabajar con Agencia de Marketing, Periodistas, Actores, Autoridades y Relacionadores Públicos. En el año 2006 realicé  mi primer proyecto para una tienda de ropa italiana y  también en el mismo año un extenso trabajo para una franquicia, lo cual resulto muy fructífero y divertido, ¡Aprendí mucho!.</p>
+                <p class="tarjetaClientes__p2">El tiempo fue pasando y me seguí perfeccionando y me dedique a realizar  planes del marketing para diferentes rubros, estudio de mercado, brindar soporte y asesoría a mis clientes. Como ya conocía distintos rubros y me encantaba asesorar comencé a dar charlas a emprendedores, pequeñas y grandes empresas. Ya en el año 2016 inicie mi propio negocio de marketing digital. A través de los años he ayudado a empresas y emprendedores a vender más y posicionarse en el mercado. Mi principal motivación siempre ha sido el crecimiento orgánico y fidelización del cliente, el análisis y la optimización de recursos. Me gusta trabajar en equipo en base a objetivos y desafíos concretos.</p>
             </div>
             <div class="curriculum">
                 <div class="foto_perfil">
@@ -89,9 +90,9 @@
                             <li><strong>Ciudad: </strong>Córdoba, Argentina</li>
                         </ul>
                         <ul>
-                            <li><strong>Experiencia: </strong>10 años</li>
+                            <li><strong>Experiencia: </strong>17 años</li>
                             <li><strong>Email: </strong>inguica.comunicaciones@gmail.com</li>
-                            <li><strong>Disponibilidad: </strong>Freelance</li>
+                            <li><strong>Especialidad: </strong>Inbound Marketing</li>
                         </ul>    
                     </div>
                 </div>
@@ -137,7 +138,7 @@
             </div>
         </section>
         <section class="sobremi animate__animated animate__fadeInUp">
-            <h2>Testimonios</h2>
+            <h2>Recomendaciones</h2>
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
