--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,7 @@
         <section class="contacto animate__animated animate__fadeInUp">
             <h1>Contacto</h1>
             <hr>
-            <p>Sería increíble que trabajemos juntos, dejame tus datos y me comunicaré contigo para que me cuentes sobre el proyecto que tienes en mente. También puedes contactarme o conocer más sobre mi trabajo en los diferentes canales de comunicación que se encuentran a continuación:</p>
+            <p>Sería increíble que trabajemos juntos, dejame tus datos y me comunicaré contigo para que me cuentes sobre el proyecto que tienes en mente. También puedes seguirme en mis redes y enterarte de todas las novedades, tips, cursos y herramientas gratuitas de marketing.</p>
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.6407908975875!2d-64.18662023424828!3d-31.424021503766937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28fb8f9010b%3A0xf38e0d8c5a49ab83!2sNueva%20Cordoba%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1626891536540!5m2!1ses-419!2sar" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
@@ -96,7 +96,7 @@
                     <i class="fas fa-mobile-alt"></i>
                     <div>
                         <h4>Teléfono:</h4>
-                        <p>351895214</p>
+                        <p>3513014152</p>
                     </div>
                 </div>
             </div>
